kustomize-nginx-openshift/nginx-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  namespace: poc
  labels:
    app.kubernetes.io/instance: argocd-sample-app
spec:
  host: ngnix..apps.osi.uk.mizuho-sc.com
  to:
    kind: Service
    name: prod-nginx
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
